Fix search bar visibility when there are no results

--- a/src/app/components/search-bar/search-bar.component.css
+++ b/src/app/components/search-bar/search-bar.component.css
@@ -1,4 +1,6 @@
 form,
 mat-form-field {
   width: 100%;
+  position: relative;
+  z-index: 1000;
 }
